Bug 475737 - Exporting CMYK32 to PNG leaves vertical lines
Summary: Exporting CMYK32 to PNG leaves vertical lines
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 5.2.0
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression, triaged
Depends on:
Blocks:
 
Reported: 2023-10-17 13:57 UTC by Freya Lupen
Modified: 2024-03-27 16:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2023-10-17 13:57:25 UTC
SUMMARY
As reported on KA (https://krita-artists.org/t/on-export-to-png-blue-areas-now-have-thin-vertical-purple-lines/76230), exporting CMYK32 to PNG leaves discolored vertical lines at intervals. This happens on 5.2.0, but not 5.1.5. It appears to have been caused by commit e152f99c12 (https://invent.kde.org/graphics/krita/-/commit/e152f99c12).

STEPS TO REPRODUCE
1. Create a CMYK32 image with a whitish background, draw some blue scribbles.
2. Export to PNG.

OBSERVED RESULT
Purple lines, and a blueish background.

EXPECTED RESULT
To look the same as in Krita- with no lines and a whitish background.

SOFTWARE/OS VERSIONS
Krita 5.2.0
Comment 1 wolthera 2023-10-18 10:27:12 UTC
I can confirm this.
Comment 2 Dmitry Kazakov 2024-03-27 16:53:45 UTC
Git commit 03349d25a2f745dfc8d05feafca7ce4f0f3b58dd by Dmitry Kazakov, on behalf of Rasyuqa A. H..
Committed on 27/03/2024 at 16:53.
Pushed by dkazakov into branch 'master'.

PNG: prevent multiple color conversions

M  +23   -27   libs/ui/kis_png_converter.cpp

https://invent.kde.org/graphics/krita/-/commit/03349d25a2f745dfc8d05feafca7ce4f0f3b58dd
Comment 3 Dmitry Kazakov 2024-03-27 16:54:13 UTC
Git commit df9b50fe00dbf8cd66cc2789b787865864579f9b by Dmitry Kazakov, on behalf of Rasyuqa A. H..
Committed on 27/03/2024 at 16:54.
Pushed by dkazakov into branch 'krita/5.2'.

PNG: prevent multiple color conversions


(cherry picked from commit 03349d25a2f745dfc8d05feafca7ce4f0f3b58dd)

M  +23   -27   libs/ui/kis_png_converter.cpp

https://invent.kde.org/graphics/krita/-/commit/df9b50fe00dbf8cd66cc2789b787865864579f9b