PNG: prevent multiple color conversions

BUG: 475737